--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 283 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 287 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
+<li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
@@ -95,30 +96,30 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   8235 rev-parse
-   3812 symbolic-ref
-    606 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    297 diff
+   8387 rev-parse
+   3888 symbolic-ref
+    620 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    300 diff
+    286 st
     282 diff-index
-    278 st
     274 log
-    230 checkout
-    218 lola
+    234 checkout
+    222 lola
     175 --git-dir=.git
-    106 stash
-     80 br
-     79 help
+    110 stash
+     84 help
+     83 br
      72 add
+     67 lol
      67 commit
-     66 lol
      60 achievements
-     54 difftool
+     55 difftool
+     40 push
      40 config
+     39 merge
      38 rebase
-     38 push
-     38 merge
      38 branch
-     24 tag
+     27 tag
      21 show
      17 fetch
      14 remote
@@ -131,7 +132,7 @@ Git commands sorted by usage:
       6 status
       6 reflog
       6 pull
-      5 format-patch
+      6 format-patch
       5 clone
       4 describe
       3 --git-dir=
