--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 313 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 318 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -89,6 +89,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Presenter (Level 5)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
+<li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -100,37 +101,38 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  10679 rev-parse
-   5035 symbolic-ref
-    783 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    387 st
-    333 diff
-    301 lola
-    283 checkout
+  10895 rev-parse
+   5143 symbolic-ref
+    793 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    390 st
+    336 diff
+    309 lola
+    290 checkout
     282 diff-index
     280 log
-    185 --git-dir=.git
+    212 --git-dir=.git
     141 stash
-    114 br
-    107 add
-     99 help
-     97 commit
-     79 lol
-     79 difftool
-     64 push
+    127 br
+    110 add
+    101 help
+     99 commit
+     82 difftool
+     80 lol
+     65 push
      60 achievements
-     52 merge
+     55 merge
      50 tag
+     41 config
      41 branch
      40 rebase
-     40 config
      31 show
-     17 fetch
+     22 ls-remote
+     18 remote
+     18 fetch
      17 bundle
-     14 remote
-     12 ls-remote
      11 gc
      11 blame
+      9 pull
       9 --git-dir=
       9 format-patch
       7 reset
@@ -138,7 +140,6 @@ Git commands sorted by usage:
       7 fsck
       7 clone
       6 status
-      6 pull
       5 describe
       4 init
       3 for-each-ref
