--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 326 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 330 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -48,6 +48,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Investigator (Level 3)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 9 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 23 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
+<li><div class="title">Apprentice Miller (Level 3)</div>  <div class="info">Add only part of a file to the stage 130 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice News Reader (Level 1)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Presenter (Level 3)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
@@ -102,29 +103,29 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  11467 rev-parse
-   5429 symbolic-ref
-    844 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    404 st
-    347 diff
-    329 lola
-    305 checkout
+  11653 rev-parse
+   5522 symbolic-ref
+    849 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    406 st
+    358 diff
+    330 lola
+    306 checkout
     282 diff-index
     280 log
     215 --git-dir=.git
     152 stash
-    142 br
-    113 add
-    109 help
-    105 commit
-     86 difftool
+    143 br
+    115 add
+    111 help
+    106 commit
+     89 difftool
      81 lol
      77 push
-     61 achievements
+     62 achievements
      60 merge
-     56 tag
+     59 tag
+     44 config
      43 ign
-     41 config
      41 branch
      40 rebase
      33 show
@@ -132,11 +133,11 @@ Git commands sorted by usage:
      18 remote
      18 fetch
      17 bundle
+     15 clone
      11 gc
      11 blame
-     10 clone
+     10 --git-dir=
       9 pull
-      9 --git-dir=
       9 format-patch
       8 reflog
       7 reset
