--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 337 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 345 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -85,6 +85,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
+<li><div class="title">Master Gipsy (Level 7)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -104,38 +105,38 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  11793 rev-parse
-   5592 symbolic-ref
-    864 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    411 st
+  11965 rev-parse
+   5678 symbolic-ref
+    892 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    417 st
     361 diff
-    337 lola
-    310 checkout
+    350 lola
+    322 checkout
     282 diff-index
     280 log
     215 --git-dir=.git
     152 stash
-    146 br
-    115 add
-    113 help
-    109 commit
+    150 br
+    116 add
+    114 help
+    112 commit
+     92 push
      91 difftool
-     82 push
      81 lol
-     62 tag
-     62 merge
+     69 tag
+     67 merge
      62 achievements
+     45 branch
      44 config
      43 ign
-     41 branch
      40 rebase
      33 show
      23 ls-remote
-     18 remote
+     19 remote
      18 fetch
      17 bundle
      16 clone
-     11 gc
+     12 gc
      11 blame
      10 --git-dir=
       9 pull
