--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 345 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 350 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -89,6 +89,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 170 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Presenter (Level 5)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -105,56 +106,58 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  11965 rev-parse
-   5678 symbolic-ref
-    892 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    417 st
-    361 diff
-    350 lola
-    322 checkout
+  16989 rev-parse
+   8196 symbolic-ref
+   1225 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    550 st
+    510 lola
+    452 diff
+    393 checkout
     282 diff-index
     280 log
     215 --git-dir=.git
-    152 stash
-    150 br
-    116 add
-    114 help
-    112 commit
-     92 push
-     91 difftool
-     81 lol
-     69 tag
-     67 merge
+    191 br
+    184 stash
+    183 difftool
+    170 help
+    153 commit
+    149 add
+    120 push
+    105 tag
+     84 merge
+     83 lol
+     68 branch
      62 achievements
-     45 branch
-     44 config
+     48 config
      43 ign
      40 rebase
-     33 show
+     35 show
      23 ls-remote
      19 remote
      18 fetch
+     18 clone
      17 bundle
-     16 clone
+     14 --git-dir=
      12 gc
+     11 format-patch
      11 blame
-     10 --git-dir=
+      9 reflog
       9 pull
-      9 format-patch
-      8 reflog
+      8 describe
       7 reset
       7 fsck
       6 status
-      5 describe
       4 init
       3 for-each-ref
       2 whatchanged
       2 show-branch
+      2 rm
       2 revert
+      2 --git-dir=/home/michiel/SNaP/temp-checkout/snap-ramp/.git
       2 clean
       2 bisect
+      2 apply
       2 am
-      1 rm
       1 prune
       1 ls-files
       1 --help
