--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 350 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 357 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -71,6 +71,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Blacksmith (Level 5)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Blacksmith (Level 6)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Butcher (Level 4)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -106,25 +107,25 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  16989 rev-parse
-   8196 symbolic-ref
-   1225 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    550 st
-    510 lola
-    452 diff
-    393 checkout
+  17263 rev-parse
+   8333 symbolic-ref
+   1237 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    567 st
+    522 lola
+    460 diff
+    396 checkout
     282 diff-index
     280 log
     215 --git-dir=.git
-    191 br
+    195 br
+    189 difftool
     184 stash
-    183 difftool
-    170 help
-    153 commit
-    149 add
-    120 push
-    105 tag
-     84 merge
+    173 help
+    162 commit
+    161 add
+    122 push
+    107 tag
+     86 merge
      83 lol
      68 branch
      62 achievements
@@ -147,11 +148,11 @@ Git commands sorted by usage:
       7 reset
       7 fsck
       6 status
+      4 rm
       4 init
       3 for-each-ref
       2 whatchanged
       2 show-branch
-      2 rm
       2 revert
       2 --git-dir=/home/michiel/SNaP/temp-checkout/snap-ramp/.git
       2 clean
