--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 365 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 371 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -92,6 +92,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 170 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
+<li><div class="title">Miller (Level 5)</div>  <div class="info">Add only part of a file to the stage 204 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Presenter (Level 5)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -108,34 +109,34 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  17625 rev-parse
-   8514 symbolic-ref
-   1263 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    586 st
-    540 lola
-    477 diff
-    409 checkout
+  18347 rev-parse
+   8874 symbolic-ref
+   1327 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    611 st
+    566 lola
+    509 diff
+    433 checkout
     282 diff-index
     281 log
     215 --git-dir=.git
-    200 br
-    190 difftool
-    184 stash
-    176 help
-    168 add
-    167 commit
-    128 push
-    111 tag
-     89 merge
+    205 br
+    196 difftool
+    190 stash
+    186 help
+    182 add
+    179 commit
+    137 push
+    118 tag
+     93 merge
      87 lol
-     72 branch
+     80 branch
      62 achievements
      48 config
      43 ign
      40 rebase
-     35 show
+     37 show
      23 ls-remote
-     19 remote
+     20 remote
      18 fetch
      18 clone
      17 bundle
@@ -145,7 +146,7 @@ Git commands sorted by usage:
      11 blame
       9 reflog
       9 pull
-      8 describe
+      9 describe
       7 reset
       7 fsck
       6 status
@@ -163,6 +164,7 @@ Git commands sorted by usage:
       1 prune
       1 ls-files
       1 --help
+      1 annotate
 </pre>
 <script type="text/javascript">
 function showLocked() {
