--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 377 points<br>
+Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 383 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -73,6 +73,7 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Blacksmith (Level 5)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Blacksmith (Level 6)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Butcher (Level 4)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
+<li><div class="title">Butcher (Level 5)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Delivery Boy (Level 4)</div>  <div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
@@ -110,30 +111,30 @@ Unlocked 29/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  19232 rev-parse
-   9318 symbolic-ref
-   1402 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    637 st
-    585 lola
-    525 diff
-    458 checkout
-    285 log
+  19834 rev-parse
+   9622 symbolic-ref
+   1445 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    653 st
+    609 lola
+    540 diff
+    471 checkout
+    287 log
     282 diff-index
-    215 br
+    220 difftool
+    219 br
     215 --git-dir=.git
-    212 difftool
-    209 add
-    204 commit
-    199 help
-    197 stash
-    147 push
-    136 tag
-     99 merge
+    214 add
+    211 commit
+    206 stash
+    205 help
+    156 tag
+    152 push
+    103 merge
      87 lol
      81 branch
      62 achievements
+     49 rebase
      48 config
-     45 rebase
      43 ign
      39 show
      23 ls-remote
@@ -142,8 +143,8 @@ Git commands sorted by usage:
      18 clone
      17 bundle
      14 --git-dir=
+     12 pull
      12 gc
-     11 pull
      11 format-patch
      11 blame
       9 reflog
